--- a/random.ioc
+++ b/random.ioc
@@ -50,6 +50,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_ModeDefaultEXTI
+PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA10.Locked=true
 PA10.Signal=GPXTI10
 PA13\ (JTMS/SWDIO).Locked=true
@@ -72,6 +74,8 @@ PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_ModeDefaultEXTI
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
@@ -109,7 +113,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
